--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                         <div class="timeline-body">
                                             <div>
                                                 <div>
-                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Vào ngày hôm đó, em đã đồng ý làm người yêu của Anh! Hai ta quen nhau thật sự là một điều anh không thể ngờ! Nhờ Facebook và Game PUGB Mobile! Mà ta đã đến với nhau</p>
+                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Vào ngày hôm đó, hai ta quen nhau thật sự là một điều anh không thể ngờ! Nhờ Facebook mà ta đã đến với nhau</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -155,7 +155,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2030</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
                                     </div>
                                 </div>
                             </li>
