--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2019</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -109,7 +109,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2019</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -128,11 +128,11 @@
                                         <div class="timeline-body">
                                             <div>
                                                 <div>
-                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Và những ngày sau đó là những cuộc trò chuyện video call messenger cùng em! Vui cũng có buồn cũng có ^^</p>
+                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Và những ngày sau đó là những cuộc trò chuyện cùng em! Vui cũng có buồn cũng có ^^</p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2019</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -155,7 +155,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -178,7 +178,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -201,7 +201,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -224,7 +224,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -247,7 +247,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -293,7 +293,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -312,11 +312,11 @@
                                         <div class="timeline-body">
                                             <div>
                                                 <div>
-                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Lần đầu tiên xem phim cùng nhau, lần đầu tiên nắm tay nhau, hai bữa ăn đầu tiên, buổi hẹn hò đầu tiên.</p>
+                                                    <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Lần đầu tiên gặp em đã làm anh xao xuyến.</p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="timeline-foot">Ngày ... tháng ... năm 2020</div>
+                                        <div class="timeline-foot">Ngày ... tháng ... năm 20</div>
                                     </div>
                                 </div>
                             </li>
@@ -355,7 +355,7 @@
             <div class="col-xs-12 text-center " data-anijs="if: scroll,on: window,do: zoomInDown animated, before: $scrollReveal repeat">
                 <span class="col-xs-12" style="font-family: 'Dancing Script', cursive; color: #a81723; font-size: 20px;
                     margin: 15px;padding: 15px;line-height: 33px">
-                Gặp được em như một gia tài lớn nhất trong cuộc đời anh. Anh chỉ muốn đi bộ qua những ngọn núi, vượt qua những dòng sông và muốn nhìn thế giới với em, và anh chỉ yêu em. Anh không thể cho em cả thế giới, nhưng thế giới của anh ở đây dành cho em. Anh có thể mượn cuộc sống của em?<br>
+                Gặp được em như một gia tài lớn nhất trong cuộc đời anh. Anh chỉ muốn đi bộ qua những ngọn núi, vượt qua những dòng sông và muốn nhìn thế giới với em, và anh chỉ bên em. Anh không thể cho em cả thế giới, nhưng thế giới của anh ở đây dành cho em. Anh có thể mượn cuộc sống của em?<br>
                 Em có thể mượn cuộc sống của anh để nói chuyện, chia sẻ những vui buồn cùng nhau. Có thể sẽ không có ai yêu em nhiều hơn anh. Những năm tháng dài sau này, chỉ có anh sẵn sàng đồng hành cùng em. Anh  muốn trái tim của anh cũng như là trái tim của em, chúng ta sẽ hòa vào nhau, sẽ sống theo nó.<br/>
                 　</span>
             </div>
@@ -379,7 +379,7 @@
         <div class="col-xs-12 text-center " data-anijs="if: scroll,on: window,do: zoomInDown animated, before: $scrollReveal repeat">
             <span class="col-xs-12" style="font-family: 'Dancing Script', cursive;color: #a81723; font-size: 20px;
                 margin: 15px;padding: 15px;line-height: 33px">
-            Gặp em và yêu em đó là định mệnh đã được sắp đặt cho anh. <br>
+            Gặp em đó là định mệnh đã được sắp đặt cho anh. <br>
             Cuộc sống này là sự hòa hợp giữa bầu trời và mặt đất, anh sẽ che chở em khỏi gió và mưa, cùng em cất vang tiếng hát giai điệu của tình yêu.<br>
             Anh xin thề sẽ yêu em vô điều kiện, trân trọng em, trái tim anh chỉ có em, chỉ có hai chúng ta, chỉ có gia đình của chúng ta là duy nhất, và nó sẽ không thay đổi<br>
             Bất kể thời tiết, thăng trầm trong cuộc sống, yếu hay khỏe, anh cũng sẽ đi cùng em. Dù trái đất có ngừng quay và mặt trời ngừng toả sáng, anh cũng sẽ thuộc về em. <br>
@@ -391,7 +391,7 @@
         </div>
         <div class="col-xs-12 text-center txt underline">
             <h2 class="col-xs-12" style="font-family: 'Pattaya', sans-serif;
-                color: #283a44; padding-bottom: 0px;">Dẫn chứng tình yêu của chúng ta</h2>
+                color: #283a44; padding-bottom: 0px;">Dẫn chứng tình cảm của anh</h2>
         </div>
         <div class="photopile-wrapper col-xs-12 text-center" data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat">
             <ul class="photopile col-xs-12">
